--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="header">
+  <app-header></app-header>
+</div>
+<div class="content">
+  <div style="width: 1100px;">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+<div class="footerForm" style="padding: 25px;">
+  <app-footer-form></app-footer-form>
+</div>
+<div class="text">Commerce, is powered by 100% renewable electricity.</div>
+<div class="footer">
+  <app-footer-related-infor></app-footer-related-infor>
+</div>
