--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,20 +1,28 @@
 <div class="header">
   <div class="header_logo">E-commerce</div>
   <div class="header_search">
-    <div class="header_options"></div>
+    <select [(ngModel)]="selectedOption" class="header_select">
+      <option value="allCategories">All Categories</option>
+      <option value="clothingShoes">Clothing & Shoes</option>
+      <option value="homeLiving">Home & Living</option>
+      <option value="weddingParty">Wedding & Party</option>
+      <option value="toysEntertainment">Toys & Entertainment</option>
+      <option value="artCollectibles">Art & Collectibles</option>
+      <option value="craftSuppliesTools">Craft Supplies & Tools</option>
+    </select>
     <div class="header_search-input">
-      <!-- <mat-form-field class="example-full-width">
-        <input matInput type="text" placeholder="Search anything" />
-      </mat-form-field> -->
-      <form class="example-form">
-        <mat-form-field class="example-full-width">
-          <mat-label>Favorite food</mat-label>
-          <input matInput placeholder="Ex. Pizza" value="Sushi">
-        </mat-form-field>
-      </form>
+      <input placeholder="Search anything" class="inputSearch">
+      <img src="../../../assets/imgs/Search_alt_duotone_line.png" alt="">
     </div>
   </div>
   <div class="header_btn-help">Help</div>
-  <div class="header_btn-account">Account</div>
-  <div class="header_btn-shopping">Shopping</div>
+  <div class="header_btn-account">
+    <img src="../../../assets/imgs/User.svg" alt="">
+    Account
+  </div>
+  <div class="header_btn-shopping">
+    <img src="../../../assets/imgs/Bag_alt.svg" alt="">
+    Shopping
+  </div>
 </div>
+<app-header-category [categories]="categories"></app-header-category>
