--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
   <app-header></app-header>
 </div>
 <div class="content">
-  <div style="width: 1100px;">
+  <div class="content_container">
     <router-outlet></router-outlet>
   </div>
 </div>
-<div class="footerForm" style="padding: 25px;">
+<div class="footerForm">
   <app-footer-form></app-footer-form>
 </div>
 <div class="text">Commerce, is powered by 100% renewable electricity.</div>
