--- a/src/app/components/footer-form/footer-form.component.html
+++ b/src/app/components/footer-form/footer-form.component.html
@@ -8,13 +8,19 @@
     <div class="footer_form-submit">
       <div class="footer_form-input">
         <input type="text" placeholder="Drop your Email" />
-        <div class="footer_form-btn">
+        <div class="footer_form-btn hidden">
           Subscribe
           <img src="../../../assets/imgs/Vector9.svg" alt="" />
         </div>
       </div>
     </div>
     <div style="height: 20px;"></div>
+    <div class="hiddenCurr">
+      <div class="footer_form-btn" style="margin-bottom: 20px;">
+        Subscribe
+        <img src="../../../assets/imgs/Vector9.svg" alt="" />
+      </div>
+    </div>
     <div class="footer_form-txt">First order only. You’re ready?</div>
   </div>
 </div>
