--- a/src/app/components/footer-related-infor/footer-related-infor.component.html
+++ b/src/app/components/footer-related-infor/footer-related-infor.component.html
@@ -29,20 +29,21 @@
     <div class="footer_infor-moreLeft">
       © 2022 Commerce, Inc.
     </div>
-    <div style="width: 100px;"></div>
+    <div class="widthMar"></div>
     <div class="footer_infor-moreRight">
-      <span class="">
+      <span class="hidden">
         Privacy policy
       </span>
-      <span class="">
+      <span class="hidden">
         Terms of use
       </span>
-      <span class="">
+      <span class="hidden">
         Cookies
       </span>
     </div>
-    <div class="scroll-top">
+    <div class="scroll-top hidden" (click)="scrollToTop()">
       Scroll to top
       <img src="../../../assets/imgs/Arrow_top.svg" alt="" />
     </div>
+  </div>
 </div>
