--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,9 @@
+.menuLaptop {
+  display: none;
+}
+.block3 {
+  display: flex;
+}
 .header {
   width: 1100px;
   padding: 10px;
@@ -97,5 +103,120 @@
   &:focus {
     outline: none;
     border-bottom: 1px solid #ccc;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 1024px) {
+  .menuLaptop {
+    display: block;
+    padding: 5px 20px;
+    border-radius: 20px;
+    background-color: #F5F6F8;
+    margin-right: 20px;
+    &:hover {
+      opacity: 0.8;
+      cursor: pointer;
+    }
+  }
+  .block1 {
+    order: 1;
+  }
+  .block2 {
+    order: 3;
+    display: flex;
+    align-items: center;
+    flex-basis: 100%;
+  }
+  .block3 {
+    order: 2;
+    display: flex;
+  }
+  .header {
+    width: auto;
+    gap: 20px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    &_search {
+      width: 100%;
+      &-input {
+        width: 100%;
+        input {
+          width: 100%;
+        }
+      }
+    }
+  }
+  .inputSearch {
+    padding: 10px;
+    // min-width: 350px;
+    min-width: auto;
+    border: none;
+    border-bottom: 1px solid transparent;
+    &:focus {
+      outline: none;
+      border-bottom: 1px solid #ccc;
+    }
+  }
+}
+
+@media (max-width: 600px) {
+  .menuLaptop {
+    display: block;
+    padding: 5px 20px;
+    border-radius: 20px;
+    background-color: #F5F6F8;
+    margin-right: 20px;
+    &:hover {
+      opacity: 0.8;
+      cursor: pointer;
+    }
+  }
+  .block1 {
+    order: 1;
+  }
+  .block2 {
+    order: 3;
+    display: flex;
+    align-items: center;
+    flex-basis: 100%;
+  }
+  .block3 {
+    order: 2;
+    display: flex;
+  }
+  .header {
+    width: auto;
+    gap: 5px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    &_search {
+      width: 100%;
+      &-input {
+        width: 100%;
+        input {
+          width: 100%;
+        }
+      }
+    }
+  }
+  .inputSearch {
+    padding: 10px;
+    // min-width: 350px;
+    min-width: auto;
+    border: none;
+    border-bottom: 1px solid transparent;
+    &:focus {
+      outline: none;
+      border-bottom: 1px solid #ccc;
+    }
+  }
+  .hidden {
+    display: none;
   }
 }
