--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,49 +1,5 @@
-.header {
-  display: flex;
-  justify-content: center;
-  background-color: #FFF9F3;
-}
-.text {
-  display: flex;
-  justify-content: center;
-  background-color: #F5F6F8;
-  padding: 20px 0;
-}
-.content{
-  justify-content: center;
-  display: flex;
-  &_container {
-    width: 1100px;
-  }
-}
-.footer {
-  display: flex;
-  justify-content: center;
-}
-.footerForm {
-  display: flex;
-  justify-content: center;
-  padding: 25px;
-}
-
-@media (min-width: 601px) and (max-width: 1024px) {
-  .maxWidth {
-    width: auto;
-  }
-}
-
-@media (max-width: 600px) {
-  .maxWidth {
-    width: auto;
-  }
-  .content{
-    justify-content: center;
-    display: flex;
-    &_container {
-      width: auto;
-    }
-  }
-  .footerForm {
-    padding: 8px;
-  }
+html, body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
