--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -36,4 +36,4 @@
     </div>
   </div>
 </div>
-<!-- <app-header-category [categories]="categories"></app-header-category> -->
+<app-header-category [categories]="categories"></app-header-category>
