--- a/src/app/components/header-category/header-category.component.html
+++ b/src/app/components/header-category/header-category.component.html
@@ -1,7 +1,8 @@
 <div class="header_category">
-  <div *ngFor="let item of categories" class="header_category-container" (click)="handleClick(item)">
-    <span *ngIf="item.selected" class="header_category-textSelected">{{item.title}}</span>
-    <span *ngIf="!item.selected" class="header_category-text">{{item.title}}</span>
-    <div *ngIf="item.selected" class="header_category-selected"></div>
+  <div *ngFor="let cat of cat$ | async" class="header_category-container" (click)="handleClick(cat.name)">
+    <span style="text-transform: uppercase;" class="header_category-textSelected">{{cat.name}}</span>
+    <!-- <span *ngIf="item.selected" class="header_category-textSelected">{{cat.name}}</span> -->
+    <!-- <span *ngIf="!item.selected" class="header_category-text">{{cat.name}}</span> -->
+    <!-- <div *ngIf="item.selected" class="header_category-selected"></div> -->
   </div>
 </div>
